<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Service Fundamentals</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Start_Service">Start Service</string>
    <string name="Play">Play</string>
    <string name="Pause">Pause</string>
    <string name="Stop">Stop</string>
    <string name="Skip_Forward">Skip Forward</string>
    <string name="Skip_Backward">Skip Backward</string>
    <string name="Stop_Service">Stop Service</string>

</resources>
