<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.brianstacks.servicefundamentals">
    <TextView
        android:id="@+id/trackText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        />
    <LinearLayout
        android:id="@+id/layout1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/startService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Start_Service"/>
        <Button
            android:id="@+id/playButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Play"/>
        <Button
            android:id="@+id/pauseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Pause"/>
        <Button
            android:id="@+id/stopButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Stop"/>
        <Button
            android:id="@+id/skipForward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Skip_Forward"/>
        <Button
            android:id="@+id/skipBack"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Skip_Backward"/>
        <Button
            android:id="@+id/stopService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Stop_Service"/>
    </LinearLayout>


</LinearLayout>